--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -43,7 +43,11 @@ android {
 
 dependencies {
 
+
     def glideVersion = '4.12.0'
+
+    // Firebase Auth
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:28.4.2')
