--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -44,6 +44,7 @@ android {
 dependencies {
 
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def glideVersion = '4.12.0'
 
     // Firebase Auth
