--- a/Android/build.gradle
+++ b/Android/build.gradle
@@ -12,8 +12,8 @@ buildscript {
         def nav_version = "2.3.5"
         classpath("androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version")
         // Dagger Hilt
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.38.1'
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.39.1'
+        classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
