--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     def glideVersion = '4.12.0'
     def roomVersion = "2.3.0"
 
+    // time picker view
+    implementation 'com.github.loperSeven:DateTimePicker:0.4.1'
+
     // Firebase Auth
     implementation 'com.google.firebase:firebase-auth-ktx:21.0.1'
 
